# seaport

./: .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh  package.json  seaport.md
.github/scripts/: release-metadata.ts  sync-cargo-version.ts
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: evaluation.rs
benchmarks/: README.md  benchmark.sh  compare.sh  measure.ts  run.py
benchmarks/results/: 2026-06-05-oracle.json  2026-06-05-oracle.md  2026-06-12-datasets.json  2026-06-12-datasets.md
benchmarks/tasks/basic-oracle/: instruction.md  task.toml
docs/: code-explanations.md
docs/adr/: 0001-deterministic-evaluation.md  0002-sandboxed-execution-backend.md
docs/migrations/: 0001-initial-runtime.md  0001-initial-seaport.md
docs/observability/: runtime-dashboard.md  seaport-dashboard.md
docs/operations/: ownership.md
examples/: basic_evaluation.rs
examples/tasks/basic-evaluation/: instruction.md  task.toml
landing/: README.md  astro.config.mjs  package.json  vercel.json
landing/src/components/: Features.astro  Footer.astro  Hero.astro  Install.astro  Nav.astro  Output.astro  Sandbox.astro  StarButton.astro  Terminal.astro  Workflow.astro
landing/src/layouts/: DocsLayout.astro  Layout.astro
landing/src/lib/: remark-callouts.mjs
landing/src/pages/: index.astro
landing/src/styles/: global.css
src/: agent.rs  error.rs  evaluation.rs  lib.rs  logging.rs  main.rs  registry.rs  sandbox.rs  target.rs  telemetry.rs  toml_doc.rs  upgrade.rs
tests/: cli_upgrade.rs  cli_version.rs  evaluation_flow.rs
(+13 files in other folders)
