[package]
name = "seaport"
version = "0.1.0"
edition = "2021"
description = "CLI-first agent evaluation framework."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
serde_json = "1"

[lib]
name = "seaport"
path = "src/lib.rs"

[[bin]]
name = "seaport"
path = "src/main.rs"

[[bench]]
name = "evaluation"
harness = false
